<resources>
    <string name="app_name">My Application</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="dept">Department:</string>
    <string name="sis">SIS</string>
    <string name="cs">CS</string>
    <string name="bio">BIO</string>
    <string name="others">Others</string>
    <string name="mood">Your current mood:</string>
    <string name="submit">Submit</string>
</resources>
