<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dept"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/sisBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sis"
            android:textSize="16sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/csBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cs"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/bioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/otherBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textSize="16sp" />

    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/mood"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/submit"
        />


</LinearLayout>